# PythonBaseSetup

./: README.md
directorio1/: pyproject.toml
ejemplo/: pyproject.toml
