[tool.poetry]
name = "ejemplo"
version = "0.1.0"
description = "Un Ejemplo basico"
authors = ["Brujo <tomowl@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
